fix dark mode

--- a/src/styles/_root-css-vars.css
+++ b/src/styles/_root-css-vars.css
@@ -37,5 +37,6 @@
         --color-text: 0 0% 80%;
         --color-background: 0 0% 13%;
         --color-neutral-100: 0 0% 95%;
+        --color-link: 29 92% 44%;
     }
 }
